--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<div class="right">
 			 <button class="btn" ><a href="contact.html" >Contact</a></button>
 		</div>
+	</header>
     <div class="container">
       Shubham kishor khadayat
     </div>
